--- a/OOP/오버로딩과 오버라이딩의 차이점은?.md
+++ b/OOP/오버로딩과 오버라이딩의 차이점은?.md
@@ -1,3 +1,7 @@
 오버로딩은 클래스의 상속을 위해 사용하는 것이고 오버라이딩은 같은 함수를 여러 가지의 변수들이 입력할 수 있도록 만드는 것이다.
 오버로딩은 부모클래스에 있던 함수를 확장시켜서 자식 클래스에서 기능을 추가한다.
 오버라이딩은 같은 이름의 함수가 있으면 그 함수를 호출할 때 넣은 인자에 맞는 함수를 사용하도록 한다.
+________________________ 
+230201
+
+재정의 override는 클래스 상속에서 쓰고 overload는 함수의 변수를 다양하게 만드는데 쓴다.
