--- a/23/230307.md
+++ b/23/230307.md
@@ -1,5 +1,11 @@
-게임수학
+🤯 
 
-🤯 물체의 노말벡터를 이용해서 stylized rendering를 사용했다.
+물체의 노말벡터를 이용해서 stylized rendering를 사용했다.
 
-🤔 컴퓨터 그래픽스 배우면서 행렬 계산, 라이팅, 그림자 처리 등을 했는데 그 내용들은 기억이 안났다.
+C언어에서 함수를 호출하고 변수를 쓰는 것이 MOV, PUSH, CALL 등으로 내부적으로 쪼개져서 작동한다.
+
+🤔 
+
+컴퓨터 그래픽스 배우면서 행렬 계산, 라이팅, 그림자 처리 등을 했는데 그 내용들은 기억이 안났다.
+
+컴구에서 레지스터에서 하나씩 실행되고 주소 참조하고 그런 내용 했는데 기억이 안났다.
