--- a/23/230307.md
+++ b/23/230307.md
@@ -7,6 +7,8 @@ C언어에서 함수를 호출하고 변수를 쓰는 것이 MOV, PUSH, CALL 등
 
 🤔 
 
-컴퓨터 그래픽스 배우면서 행렬 계산, 라이팅, 그림자 처리 등을 했는데 그 내용들은 기억이 안났다.
+행렬 계산, 라이팅, 그림자 처리, 퐁세이딩, 비트맵 등
 
-컴구에서 레지스터에서 하나씩 실행되고 주소 참조하고 그런 내용 했는데 기억이 안났다.
+여러 레지스터가 있고 하나씩 명령어가 실행되고 어떻게 실행중인 프로그램의 변수를 저장하는지
+
+
