--- a/23/230307.md
+++ b/23/230307.md
@@ -8,6 +8,6 @@ C언어에서 함수를 호출하고 변수를 쓰는 것이 MOV, PUSH, CALL 등
 
 행렬 계산, 라이팅, 그림자 처리, 퐁세이딩, 비트맵 등
 
-여러 레지스터가 있고 하나씩 명령어가 실행되고 어떻게 실행중인 프로그램의 변수를 저장하는지
+컴퓨터 구조에서 여러 레지스터가 있고 하나씩 명령어가 실행되고 어떻게 실행중인 프로그램의 변수를 저장하는지
 
 
