--- a/23/230309.md
+++ b/23/230309.md
@@ -8,4 +8,13 @@
 
 한글이 윈도우-맥사용하면서 지는 이유
 
-하나의 코어에서 프로세스를 하나 돌리는지 스레드를 하나 돌릴 수 있는지 -> 스레드 하나이다.
+하나의 코어에서 프로세스를 하나 돌리는지 스레드를 하나 돌릴 수 있는지 
+-> 스레드 하나이다.
+
+변수가 어떻게 메모리의 주소와 연결되는지 궁금하다.
+
+greater<int> 비교함수객체가 무엇인가?
+  
+함수 포인터가 무엇인가
+  
+함수 포인터랑 비교함수객체가 어떻게 다른건가?
