--- a/23/230309.md
+++ b/23/230309.md
@@ -11,10 +11,15 @@
 하나의 코어에서 프로세스를 하나 돌리는지 스레드를 하나 돌릴 수 있는지 
 -> 스레드 하나이다.
 
-변수가 어떻게 메모리의 주소와 연결되는지 궁금하다.
+변수가 어떻게 메모리의 주소와 연결?
 
-greater<int> 비교함수객체가 무엇인가?
+greater<int> 비교함수객체가 무엇인가? -> l > r : true(swqp한다) , l <= r : false(swqp안한다) => 1, 2, 3, 순서로 정렬한다.
   
-함수 포인터가 무엇인가
+함수 포인터?
   
-함수 포인터랑 비교함수객체가 어떻게 다른건가?
+함수 포인터랑 비교함수객체 차이?
+
+함수 객체? 
+  -> 클래스나 구조체의 객체로서, 함수 호출 연산자 ()를 오버로딩하여 함수처럼 동작하게 만들어진 객체
+  
+  
