--- a/23/230309.md
+++ b/23/230309.md
@@ -22,4 +22,6 @@ greater<int> 비교함수객체가 무엇인가? -> l > r : true(swqp한다) , l
 함수 객체? 
   -> 클래스나 구조체의 객체로서, 함수 호출 연산자 ()를 오버로딩하여 함수처럼 동작하게 만들어진 객체
   
+cout이 객체? 
   
+>> <<은 뭐지?
