--- a/23/230309.md
+++ b/23/230309.md
@@ -1,6 +1,7 @@
 😮
 
 바이트 단위로 주소가 지정된다. 
+int *ptr = (int *) malloc(sizeof(int)); malloc은 void리턴해서 int *로 캐스팅 
 
 😎
 
@@ -14,6 +15,7 @@
 -> 스레드 하나이다.
 
 변수가 어떻게 메모리의 주소와 연결?
+-> 함수가 호출되면 변수가 스택에 저장된다
 
 greater<int> 비교함수객체가 무엇인가? -> l > r : true(swqp한다) , l <= r : false(swqp안한다) => 1, 2, 3, 순서로 정렬한다.
   
@@ -22,7 +24,7 @@ greater<int> 비교함수객체가 무엇인가? -> l > r : true(swqp한다) , l
 함수 포인터랑 비교함수객체 차이?
 
 함수 객체? 
-  -> 클래스나 구조체의 객체로서, 함수 호출 연산자 ()를 오버로딩하여 함수처럼 동작하게 만들어진 객체
+-> 클래스나 구조체의 객체로서, 함수 호출 연산자 ()를 오버로딩하여 함수처럼 동작하게 만들어진 객체
   
 cout이 객체? 
   
