--- a/23/230309.md
+++ b/23/230309.md
@@ -4,6 +4,8 @@
 
 int *ptr = (int *) malloc(sizeof(int)); malloc은 void리턴해서 int *로 캐스팅 
 
+int (*add_ptr)(int, int) = &add;
+
 😎
 
 프로그램이 메모리에 올라가 있는 상태가 프로세스이다.
