--- a/23/230309.md
+++ b/23/230309.md
@@ -2,9 +2,9 @@
 
 바이트 단위로 주소가 지정된다. 
 
-int *ptr = (int *) malloc(sizeof(int)); malloc은 void리턴해서 int *로 캐스팅 
+int *ptr = (int *) malloc(sizeof(int)); : malloc은 void리턴해서 int *로 캐스팅 
 
-int (*add_ptr)(int, int) = &add;
+int (*add_ptr)(int, int) = &add; : add 함수를 *add_ptr함수 포인터에 
 
 😎
 
