--- a/23/230309.md
+++ b/23/230309.md
@@ -4,7 +4,7 @@
 
 int *ptr = (int *) malloc(sizeof(int)); : malloc은 void리턴해서 int *로 캐스팅 
 
-int (*add_ptr)(int, int) = &add; : add 함수를 *add_ptr함수 포인터에 
+int (*add_ptr)(int, int) = &add; : add 함수를 *add_ptr함수 포인터에 연결 
 
 😎
 
