--- a/23/230309.md
+++ b/23/230309.md
@@ -22,7 +22,7 @@ int (*add_ptr)(int, int) = &add; : add 함수를 *add_ptr함수 포인터에 연
 
 greater<int> 비교함수객체가 무엇인가? -> l > r : true(swqp한다) , l <= r : false(swqp안한다) => 1, 2, 3, 순서로 정렬한다.
   
-함수 포인터? -> 함수의 주소값을 저장한다. 함수 반환하는 함수, 함수 매개변수로 받기 가능하다.
+함수 포인터? -> 함수의 주소값을 저장한다. 함수 반환하는 함수, 함수 매개변수로 받기 가능하다. 함수 동적으로 생성, 실행
   
 함수 포인터랑 비교함수객체 차이?
 
