--- a/23/230309.md
+++ b/23/230309.md
@@ -24,7 +24,7 @@ greater<int> 비교함수객체가 무엇인가? -> l > r : true(swqp한다) , l
   
 함수 포인터? -> 함수의 주소값을 저장한다. 함수 반환하는 함수, 함수 매개변수로 받기 가능하다. 함수 동적으로 생성, 실행
   
-함수 포인터랑 비교함수객체 차이?
+함수 포인터랑 함수객체 차이?
 
 함수 객체? 
 -> 클래스나 구조체의 객체로서, 함수 호출 연산자 ()를 오버로딩하여 함수처럼 동작하게 만들어진 객체
