--- a/23/230309.md
+++ b/23/230309.md
@@ -20,7 +20,7 @@ int (*add_ptr)(int, int) = &add; : add 함수를 *add_ptr함수 포인터에 연
 변수가 어떻게 메모리의 주소와 연결?
 -> 함수가 호출되면 변수가 스택에 저장된다
 
-greater<int> 비교함수객체가 무엇인가? -> l > r : true(swqp한다) , l <= r : false(swqp안한다) => 1, 2, 3, 순서로 정렬한다.
+greater<int> 비교함수객체가 무엇인가? -> l > r : true(swqp한다) , l <= r : false(swqp안한다)
   
 함수 포인터? -> 함수의 주소값을 저장한다. 함수 반환하는 함수, 함수 매개변수로 받기 가능하다. 함수 동적으로 생성, 실행
   
