--- a/23/230309.md
+++ b/23/230309.md
@@ -14,7 +14,7 @@ int (*add_ptr)(int, int) = &add; : add 함수를 *add_ptr함수 포인터에 연
 
 ❓
 
-한글이 윈도우-맥사용하면서 깨지는 이유
+한글이 윈도우-맥사용하면서 깨지는 이유?
 
 하나의 코어에서 프로세스를 하나 돌리는지 스레드를 하나 돌릴 수 있는지 
 -> 스레드 하나이다.
