--- a/23/230313_모르는알고리즘.md
+++ b/23/230313_모르는알고리즘.md
@@ -4,48 +4,48 @@
 
 ❓ 
 
-같은 기울기를 가지는 것을 어떻게 판단하지? y / x 할 때 x가 0인 상태면?
+### 같은 기울기를 가지는 것을 어떻게 판단하지? y / x 할 때 x가 0인 상태면?
 
-Broad Phase 알고리즘 
+### Broad Phase 알고리즘
 
 → 충돌 감지를 하는 원과 비교 대상이 되는 원들 간의 거리를 계산하여 미리 일정 범위 내에 있는 원들을 선택하고, 이들만 충돌 감지를 진행하도록 구현
 
-Kruskal
+### Kruskal
 
 → 비용 작은 엣지 순서로 추가해서 사이클 없게 MST만들기 
 
 ---
 
-공간 분할 기법(Spatial Partitioning)
+### 공간 분할 기법(Spatial Partitioning)
 
-Sweep And Prune
+### Sweep And Prune
 
-long double
+### long double
 
-트리를 이진트리로 바꾸기
+### 트리를 이진트리로 바꾸기
 
-스레드 이진 트리
+### 스레드 이진 트리
 
-AVL Tree
+### AVL Tree
 
-Red-Black Tree
+### Red-Black Tree
 
-Prim
+### Prim
 
 → 
 
-Sollin
+### Sollin
 
-Dijkstra
+### Dijkstra
 
-다익스트라랑 크루스칼 어떻게 다르지?
+### 다익스트라랑 크루스칼 어떻게 다르지?
 
-위상 정렬 알고리즘
+### 위상 정렬 알고리즘
 
-B- 트리
+### B- 트리
 
-루빅스큐브
+### 루빅스큐브
 
-랜덤 액세스가 어떻게 가능한거지?
+### 랜덤 액세스가 어떻게 가능한거지?
 
-HashTable이 O(1)인 이유?
+### HashTable이 O(1)인 이유?
