--- a/23/230313_모르는알고리즘.md
+++ b/23/230313_모르는알고리즘.md
@@ -4,8 +4,6 @@
 
 ❓ 
 
-### 같은 기울기를 가지는 것을 어떻게 판단하지? y / x 할 때 x가 0인 상태면?
-
 ### Broad Phase 알고리즘
 
 → 충돌 감지를 하는 원과 비교 대상이 되는 원들 간의 거리를 계산하여 미리 일정 범위 내에 있는 원들을 선택하고, 이들만 충돌 감지를 진행하도록 구현
@@ -14,38 +12,20 @@
 
 → 비용 작은 엣지 순서로 추가해서 사이클 없게 MST만들기 
 
----
+### cpp_dec_float_50
 
-### 공간 분할 기법(Spatial Partitioning)
+50자리 부동소수점
 
-### Sweep And Prune
+### Axis Aligned Bounding Box (AABB)
+
+박스 minPoint, maxPoint를 잡아서 다른 박스의 min, max 포인트와 비교해서 교차하는지 체크
+
+if (a.maxX < b.minX || a.minX > b.maxX) return false;
 
 ### long double
 
-### 트리를 이진트리로 바꾸기
-
-### 스레드 이진 트리
-
-### AVL Tree
-
-### Red-Black Tree
-
-### Prim
-
-→ 
-
-### Sollin
-
-### Dijkstra
-
-### 다익스트라랑 크루스칼 어떻게 다르지?
-
-### 위상 정렬 알고리즘
-
-### B- 트리
-
-### 루빅스큐브
-
-### 랜덤 액세스가 어떻게 가능한거지?
+double보다 수학계산 할 때 정확하게 쓸 수 있다.
 
 ### HashTable이 O(1)인 이유?
+
+해시함수 O(1), 해시값으로 idx 사용 O(1)
