--- a/23/230309_함수포인터,객체.md
+++ b/23/230309_함수포인터,객체.md
@@ -2,9 +2,9 @@
 
 바이트 단위로 주소가 지정된다. 
 
-int *ptr = (int *) malloc(sizeof(int)); : malloc은 void리턴해서 int *로 캐스팅 
+int *ptr == (int *) malloc(sizeof(int)); : malloc은 void리턴해서 int *로 캐스팅 
 
-int (*add_ptr)(int, int) = &add; : add 함수를 *add_ptr함수 포인터에 연결 
+int (*add_ptr)(int, int) = &add; // add 함수를 *add_ptr함수 포인터에 연결 
 
 디자인 패턴 component가 유니티에서 컴포넌트이다.
 
