--- a/ProjectCommits/회고_잠에서깨어날때까지시간을벌어줘.md
+++ b/ProjectCommits/회고_잠에서깨어날때까지시간을벌어줘.md
@@ -1,8 +1,8 @@
 ### 프로젝트 시작 시 개인적인 목표와 기대
 
-개인적인 목표 : 메모리 관련 문제 잘 처리하기 지난 프로젝트에 오브젝트가 많아져서 마지막 날에 터졌다. 어느 부분에서 문제인지 파악하지 못하고 꺼지면 계속 키면서 시연 상황에서 만족스럽지 않았다.
+개인적인 목표 : 메모리 관련 문제 잘 처리하기 이전 프로젝트에 오브젝트가 많아져서 생성 해제때문에 마지막 날에 터졌다. 어느 부분에서 문제인지 파악하지 못하고 꺼지면 계속 키면서 시연 상황에서 만족스럽지 않았다. 이번에는 CRT를 이용해서 메모리 사용을 관리했다. 그리고 씬에서 오브젝트 생성 삭제에 대해 이해하고 사용했다. 
 
-다른 사람들이 쓴 코드 이해하고 쓰기 : 엔진, 그래픽스, 툴 부분 다른 친구들이 만들었다. 지난 프로젝트에 쓰는 것은 할 수 있었는데 어떻게 만들어져있는지 이해 못했다. 그래서 그 부분이 이상한 것에 대해 리포팅하거나 수정을 하지 못했다. 
+다른 사람들이 쓴 코드 이해하고 쓰기 : 엔진, 그래픽스, 툴 부분 다른 친구들이 만들었다. 이전 프로젝트에 쓰는 것은 할 수 있었는데 세부적인 작동 원리를 몰랐다. 그래서 내가 잘못쓰는지 아닌지 물어봐야 했고 수정을 하지 못했다. 
 
 기대 : 그전에는 엔진 관련 부분을 이해 못하고 사용만 할 수 있었다. 중간에 엔진 수정할 정도로 여유있게 하기를 원했다
 
@@ -13,7 +13,7 @@
 이전 프로젝트에서보다 나아진 점
 
 1. 무엇을 어떻게 해야할지 알게된 것이었다. 클라이언트 전체 구조를 파악하고 만들었다. 
-2. C++문법을 학습하고 나니까 작성하는 코드를 이해하고 만들 수 있었다. 전 프로젝트는 그냥 기능이 되도록 하고 연결만 했다. 그리고 하다가 이거 이상한데 하면서 코드가 만들어져 있는 것에 끌려갔다. 하지만 이번에는 더 잘 만들 방법에 대해 고민한 것이 잘한 점이다. 
+2. C++문법을 학습하고 나니까 작성하는 코드를 이해하고 만들 수 있었다. 전 프로젝트는 그냥 기능이 되도록 하고 연결만 했다. 그리고 하다가 이거 이상한데 하면서 코드가 만들어져 있는 것에 추가하며 기능이 동작하는 것만 확인했다. 하지만 이번에는 더 잘 만들 방법에 대해 고민한 것이 잘한 점이다. 
 
 ---
 
@@ -53,7 +53,7 @@
 잘 한 점:
 
 1. Update()를 FSM별로 함수를 분리했다
-2. 가장 다른 것들과 연결이 많이 되어있는 플레이어 관련 부분 구현을 했다.
+2. 가장 다른 것들과 연결이 많이 되어있는 서포터 플레이어 관련 부분 구현을 했다.
 
 ```cpp
 #pragma once
@@ -1200,19 +1200,37 @@ void ButtonOpeningSkip::DebugRender(GraphicsEngine* _graphicsEngine)
 
 ### 문제점
 
-Object : Scene에서 Object를 돌리고 Object에서 Component들을 돌렸다. 
+Object - Component
+
+Scene에서 Object를 돌리고 Object에서 Component들을 돌렸다. 
 
 1. 각 Component가 템플릿으로 GetComponent 해서 써야해서 디버깅이 힘들었다. 
-2. Scene에서 객체를 만들고 컴포넌트는 각 클래스 안에서 세팅했다. 각 객체의 정보를 다르게 설정하는 것이 불가능했다. 
+2. Scene에서 객체를 만들고 컴포넌트는 각 클래스 안에서 세팅했다. 각 객체의 정보를 다르게 찍어내는 것이 불가능했다. 
 
-Button :  Button이 OnButtonClicked()를 위해 계속 Update()에서 MouseEvent를 체크한다 
+Button - OnButtonClicked() 
+
+Button이 OnButtonClicked()를 위해 계속 Update()에서 MouseEvent를 체크한다 
+
+Client 클래스 설계 
+
+일단 하나씩 클래스를 만들고 최대한 공통적인 네이밍으로 써서 나중에 구조를 변경하려고 했다
 
 ---
 
 ### 개선방안
 
+Object - Component 
+
 게임 엔진 구조에 대해 어떤 것이 더 좋은지 아직 모르겠다. 
 
-여러 방법을 배운 후에 써보고 상황에 더 나은 방법을 고를 수 있을 것이다. 
+여러 방법을 배운 후에 써보고 상황에 더 나은 방법을 고를 수 있을 것이다
+
+Button - OnButtonClicked()
+
+리팩토링이 필요했는데 가능한 구현을 해서 아쉬웠다
+
+Client 클래스 설계
+
+강제로 리팩토링 타임을 가져야 할 것 같다. 정리가 안 된 코드 위에 계속 쌓아서 불편했다
 
 ---
