--- a/23/23-02.md
+++ b/23/23-02.md
@@ -1,3 +1,48 @@
+## 230201_면접문제들체크
+면접 질문들을 어제 대답해 봤었다. 클래스에 대해 잘 모른다. OOP도 잘 모른다. 배웠던 내용인데 다 잊어버렸다.
+
+C#문법 강의를 쭉 봐야겠다. 
+
+지금은 문제 풀고싶다. 정보를 입력만 해서 잘 안들어온다. 5시간정도 머리에 입력하는 것만 했다.
+
+C# 문법에 대해 배웠다.
+
+델리게이트는 함수를 런타임에 바꿀 수 있도록 한다. 함수에다가 함수 추가 같은 기능이다.
+코루틴은 함수의 실행을 멈추고 다시 실행하는 것이다.
+invoke는 함수를 실행시켜준다. 다시 돌아가도 실행 다시 안한다.
+
+interface는 다중상속 되는데 abstract는 안된다.
+virtual은 자식 클래스에서 재정의할 수 있다.
+재정의 override는 클래스 상속에서 쓰고 overload는 함수의 변수를 다양하게 만드는데 쓴다.
+
+C++에서 다운캐스팅, 업캐스팅에 대해 배웠다. 근데 잘 모르겠다.
+예제를 봐도 응??? 이렇기만 하다. ㅍㅇㅂㅅ기출에 있었다.
+
+## 230202_상속키워드모름
+인성면접 질문에 답했다. 엄청 길었다. 생각을 미리 정리해둔다는 점에서 유용했다.
+
+업캐스팅 다운캐스팅에 대해서 어제 읽던 링크를 마저 읽어봤다. 상속된 클래스에가 위를 쓰고 위가 아래를 쓰는 것이다.
+
+C++에서는 응???? 했는데 C#에서는 조금 더 나았다. C++은 문법이 어렵다. 같은 설명을 하는데 비직관적으로 써놓았다.
+메모리를 직접 관리한다는 점에서 C++이 훨씬 어려운 것 같다.
+
+abstract, interface, virtual 키워드 들에 대해서 프로젝트에서 어떻게 쓰이는지 조금 알게 된 것 같다. 
+
+내일은 이벤트와 코루틴들에 대해서 알아봐야겠다. 질문을 하니까 똑똑해지는 기분이다.
+
+
+## 230203_Rookiss 코드분석
+R3강의 내용을 chatgpt에게 물어봤다.
+하루종일 코드 내용을 읽고 이해하는 시간만 가졌다. UI요소들을 가져오는 부분에서 어려웠다.
+
+전에 만들었던 내용에서 캐릭터 움직임만 바꾸었다. 근데 시간이 많이 걸렸다.
+쉬운 것도 못하고 있는데 뭘 할 수 있는지 모르겠다.
+
+다음주부터 게임인재원에 가야한다. 막막하다. 
+
+
+
+## 230207_내게임의역사
 게임 인재원에서 게임 수학 파트를 담당하는 교수님이 강의를 해주셨다.
 크게 게임의 역사와 발전 / 게임 수학으로 나눌 수 있다.
 
@@ -67,8 +112,6 @@
 좀 더 복잡도가 낮아서 좋았다.
 지금은 생각 날 때만 하고있고 몰입해서 하고있지는 않다.
 
-_____________________________________________
-
 ### 게임수학
 고등학교 때 수학을 잘 못했다.
 대학교 때도 마찬가지로 수1과목에서 D+을 받았다.
@@ -76,3 +119,21 @@ _____________________________________________
 수학이 화면에 물체를 표현하기 위해 필요한 언어이다.
 게임 수학과 물리 관련된 책은 읽어봤지만 사용할 줄은 모른다.
 게임 수학에 대해서 아직 많이 알지 못해서 앞으로 더 배우고 싶다.
+
+
+## 230208_테크트리부족한점
+게임 클라이언트 프로그래머
+
+[NDC] 신입 게임 프로그래머가 되는법 - 넥슨 채용 프로세스 단계별 분석 이 영상을 보고 앞으로 채워야 하는 부분에 대해 알 수 있었다.
+
+포트폴리오 : 성공한 게임 모작하기
+
+C++ : 다른 사람의 코드를 보고 분석할 수 있을 정도로 공부하기
+
+객체지향 & 패턴 : 포트폴리오를 구성할 때 구조적으로 만들어서 유지보수 쉽게 하기
+
+그래픽스 : 기초가 되는 수학이 없어서 강의를 수강해도 몰랐다. 다시 배우면서 코드가 어떤 의미인지 이해하기
+
+코테 : 프로그래머스 레벨 1 푸는 정도이다. 4단계까지 전체 문제를 풀어보기
+
+영어 : 영어로 된 문서 읽는 속도가 느리다. 영어로 된 자료를 보면서 천천히 읽기
