--- a/발표자료/240309_게임 클라이언트 신입 면접 예상질문.md
+++ b/발표자료/240309_게임 클라이언트 신입 면접 예상질문.md
@@ -107,7 +107,7 @@ static 메서드란?
 템플릿이란?
 
 * 이름없는 함수 / 한번만 실행 / 버튼 만들기 / 콜백
-* 싱글턴 
+* 객체 X / 멤버변수 X, this X, static 변수 O
 * 코드 런타임에 생성 / 벡터 타입 자유
 
 ---
@@ -119,8 +119,8 @@ static 메서드란?
 객체지향(OOP)의 5대 원칙이란?
 
 * 객체처럼 생각 / 변수 + 함수 / 상속, 다형성
-* 
-* SOLID
+* 추상화, 캡슐화, 상속, 다형성
+* SOLID SRP, OCP, LSP, DIP, ISP
 
 ---
 
@@ -154,7 +154,9 @@ C++에서 클래스(Class)와 구조체(Struct)의 차이점은?
 인터페이스(Interface)란?
 추상 클래스(abstract)란?
 
-* 
+* 클래스 재사용 / 프로퍼티, 함수 / 오버라이드
+* 공통된 기능 보장 / 각자의 기능
+* 상위의 클래스 / 객체 생성 X 
 
 ---
 
@@ -163,26 +165,51 @@ C++에서 클래스(Class)와 구조체(Struct)의 차이점은?
 메모리 구조는 어떻게 되어있는가?
 운영체제(OS)란?
 
+* cpu 레지스터, l1 l2 l3 / ram / ssd
+* 여러 프로세스 스케줄링 / io 
+
 ---
 
 # OS
-메모리 풀이란?
+
 스택(Stack) 영역이란?
 스택(Stack) 영역에 용량 제한이 있는가?
 힙(Heap) 영역이란?
 힙(Heap)은 영역에 용량 제한이 있는가?
 스택(Stack) 영역과 힙(Heap) 영역의 차이점은?
 
+* 함수가 실행되며 쌓이고 빠지는 영역 / 콜스택
+* 배열 100만개 X
+* new로 할당 요청 / 원하는 공간 잡기
+* 상대적으로 크다 / alloc 속도 느림
+* 메모리 할당 해제 속도 / 실행에 따라 쌓고 빼기, 가능한 영역 찾아서 주기
+
 ---
 
 # OS
 
 메모리 단편화란? Fragmentation?
+내부 단편화란?
+외부 단편화란?
 페이징이란?
 세그멘테이션이란?
 프레그멘테이션 회피 방법
-내부 단편화란?
-외부 단편화란?
+
+
+* 메모리 공간은 있는데 사용 X 
+* 안쓰는 작은 메모리 공간
+* 큰 메모리 못 올리는 상황
+* 메모리 올릴 때 페이지로 잘라서 가상 테이블로 매핑 / mmu가 cpu가 쓸 때 변환
+* code/data/heap/stack 논리적으로 구분
+* 페이징으로 메모리 전체를 일정 조각으로 나누면 메모리 조각내서 남은 부분에 넣기
+
+---
+
+# OS
+
+메모리 풀이란?
+
+* 시스템 콜 줄이기 / 미리 사용할 공간 new, 사용 블럭 크기 / new delte 오버로딩
 
 ---
 
@@ -192,6 +219,10 @@ C++에서 클래스(Class)와 구조체(Struct)의 차이점은?
 STL이란?
 이터레이터란?
 
+* 데이터 저장 필요 정리 방법들
+* 템플릿으로 필요한 도구
+* 공통적인 포인터 연산 제공
+
 ---
 
 # DSA
@@ -199,6 +230,10 @@ STL이란?
 리스트(List)의 개념
 리스트(List)에서 at를 구현한다면 어떻게 구현해야하는가?
 리스트(List)에서 100만번 째 데이터를 찾는데 검색속도를 줄이려면?
+
+* 다음 데이터 위치 반복적으로 들고있기
+* 카운팅 하나씩 뒤로가며 찾기
+* 리스트 만개씩 쪼개놓기 / 인덱싱 벡터로 바꾸기 / map으로 바꿔서 트리 
 
 ---
 
@@ -211,12 +246,22 @@ STL이란?
 벡터(Vector)와 배열(Array)의 차이점
 맵(Map)의 Find보다 벡터(Vector)의 Find가 더 빠른 경우는 무엇인가?
 
+* 연속된 메모리 공간 / 동적배열
+* 그 자리부터 맨 뒤까지 한 칸씩 밀기
+* 공간부족, 두 배 할당, 다 옮기기
+* 적당히 크게 받고 줄이기
+* 사이즈 결정
+* 캐시 히트 / 앞에있을 때 순차탐색
+
 ---
 
 # DSA
 
 리스트(List)와 벡터(Vector)의 차이점
 리스트(List)와 배열(Array)의 차이점
+
+* 다음주소 포인팅, 바로 옆 저장 / 캐시 히트
+* 다음주소 포인팅, 바로 옆 저장 / 계속 늘리기, 할당만 사용가능
 
 ---
 
@@ -226,14 +271,23 @@ STL이란?
 큐(Queue)의 개념
 스택(Stack)과 큐(Queue)의 차이점
 
+* LIFO 접시 쌓기
+* FIFO 대기열 
+* 순서에 따라 먼저, 나중에 처리
+
 ---
 
 # DSA
 
 맵(Map)의 개념
-해쉬 맵(Hash Map)의 개념
+해쉬 맵(unordered_map)의 개념
 해시 테이블(Hash Table)의 개념
-맵(Map)과 해쉬 맵(Hash Map)의 차이점
+맵(Map)과 해쉬 맵(unordered_map)의 차이점
+
+* 키 데이터 쌍 / 트리구조 
+* 키 해싱 데이터 찾기 / 해시테이블 인덱싱
+* 해시 함수로 변환, 미리 만든 테이블에 데이터 넣기, 충돌하면 뒤에 연결
+* RBT, 해시테이블 / log(n) 트리 내려가며 찾기, O(1) 바로 인덱스로 찾기
 
 
 ---
@@ -244,14 +298,25 @@ STL이란?
 이진트리(Binary tree)의 개념
 레드 블랙 트리(Red-black Tree)의 개념
 
+* 사이클 X, 계층구조 
+* 작으면 왼쪽 크면 오른쪽
+* 한 쪽 쏠리면 O(n), 빨강 검정 노드로 밸런싱 / 
+
 ---
 
 # DSA
+
 정렬 알고리즘이란?
 정렬 중 가장 빠른 정렬과, 그렇게 생각하는 이유는?
 퀵 소트 개념
 퀵 소트 시간복잡도
 빅오 표기법이란?
+
+* 데이터 오름차순, 내림차순
+* stl sort() / 크기에 따라 insert quick
+* 피벗 작으면 왼쪽 크면 오른쪽, 안된 부분 또 나눠서 하기
+* 최악 O(n), 정렬되어있는데 피벗 앞에만 잡기 / 일반적 O(nlogn)
+* 알고리즘 실행 경향성 대략적 표현
 
 ---
 
@@ -260,12 +325,18 @@ STL이란?
 벡터(Vector)의 내적이란?
 벡터(Vector)의 외적이란?
 
+* 한 벡터 다른 벡터에 투영한 크기 / diffuse / cos / 앞뒤
+* 두 벡터에 수직한 벡터 생성 / 만드는 평행사변형 넓이 / sin / 왼쪽 오른쪽
+
 ---
 
 # 컴퓨터 그래픽스
 
 로컬 좌표계란?
 월드 좌표계란?
+
+* 모델 불러왔을 때 처음 버텍스 위치 좌표
+* 오브젝트 월드에 배치, 물체의 위치 좌표
 
 ---
 
@@ -274,9 +345,23 @@ STL이란?
 렌더링 파이프 라인이란?
 더블 버퍼링이란?
 노멀 맵이란?
-KF와 IK란 무엇인가?
 ambient / diffuse / specular 이란?
+그림자 만드는 방법은?
+
+* cpu가 넣은 데이터 gpu가 처리 / 버텍스 점 위치, world view proj, 테셀레이션 정점처리, 픽셀 텍스쳐, 라이팅, 노말매핑 디테일, 후처리
+* 스왑체인 백버퍼 present 렌더링 끝, 앞으로 한번에 보여주기 
+* 노말 텍스쳐로 라이팅 연산 디테일 / 탄젠트 스페이스, 노말 값 표현 정도 / 하이폴리 로우폴리
+* 반사된 기본 빛 / 조명과 면 cos 빛받는 정도 / 눈에 반사된 작은범위 빛
+* 조명으로부터 depth 값 텍스쳐에 저장, 위에 그려주기
+
+---
+
+# 컴퓨터 그래픽스
+
+KF와 IK란 무엇인가?
 스키닝 애니메이션이란?
+* 본 구조 골반이 허리 움직이기, 허리가 골반 움직이기
+* 관절 부위 버텍스 여러 본 영향 / 본 구조 정보 애니메이션으로 넘겨서 연산하기 / 각 파츠는 부모의 공간 안에서 움직임
 
 ---
 
@@ -286,6 +371,10 @@ ambient / diffuse / specular 이란?
 뮤택스란?
 세마포어와 뮤택스의 차이점
 
+* 카운팅 기반 한번에 접근 가능한 락
+* 한번에 하나만 접근 가능한 락
+* 리소스 관리 사용 제어, 하나만 오게 하기
+
 ---
 
 # MultiThread
@@ -294,11 +383,27 @@ ambient / diffuse / specular 이란?
 멀티 프로세스란?
 싱글 쓰레드란?
 멀티 쓰레드란?
+
+* 메모리 올라온 프로그램 / cpu 사용 쭉 읽기
+* 각각 여러 프로세스 / os에서 타임 나눠서 쓰기
+* 하나의 실행흐름만 갖기 / 콜스택 쭉 쌓이고 빠지기
+* 하나 프로세스 여러 함수 스레드 일 나눠주기
+
+---
+
+# MultiThread
+
 멀티 쓰레드의 장/단점은?
 프로세스와 스레드의 차이점은?
 락과 쓰레드의 차이점은?
 싱글 쓰레드와 멀티 쓰레드의 차이점은?
 멀티 프로세스와 멀티 쓰레드의 차이점은?
+
+* 여러 코어 사용 / 효율적 / 디버깅 어렵 / 실행순서 보장
+* 분리된 개별적, 스택만 따로쓰기
+* 코드 일부분, 객체, 변수 / 실행하는 큰 흐름
+* 코어 사용 숫자 / 일 나눠서 실행 효율
+* 여러 프로그램, 하나에서 실행 흐름 여러개 나눠서 하기
 
 ---
 
@@ -310,6 +415,12 @@ ambient / diffuse / specular 이란?
 데드락이란?
 크리티컬 섹션이란?
 
+* 일반적으로 쭉 실행
+* 필요한 처리 분산해서 나중에 값 받기 / future promise
+* cpu가 처리 대기
+* 자원 필요한데 다른 곳에서 갖고있어서 그곳에서도 기다리는 중
+* 여러 곳에서 실행 못하도록 문 잠그기
+
 ---
 
 # Network
@@ -317,6 +428,10 @@ ambient / diffuse / specular 이란?
 TCP란?
 UDP란?
 TCP, UDP의 차이점은?
+
+* 패킷 보낼 때 연결 된 상태, 순서대로 보내기
+* 목적지로 그냥 보내기
+* 연결된 상태 유지 / 받은 데이터 정리
 
 ---
 
@@ -327,6 +442,11 @@ TCP, UDP의 차이점은?
 전방 선언이란?
 정적 라이브러리란?
 
+* 여러 곳 사용 라이브러리 한번만 메모리 올리기
+* 샵 문자 처리해서 붙히기, 컴파일러 obj, 링킹 여러 파일 모아서 exe
+* 헤더 붙히다 보면 서로 넣기, 있으니까 믿고 쓰기
+* exe 안에 포함, 링크할 때 추가
+
 ---
 
 # 기타
@@ -335,6 +455,10 @@ TCP, UDP의 차이점은?
 아스키코드란?
 유니코드와 아스키코드의 차이점은?
 
+* utf-8 16 인코딩 방식, 문자 숫자 매핑
+* 가장 처음, 한글 X, 문자를 숫자로 매핑 테이블
+* 유니코드 8은 아스키, 안시 상위호환 / 1~3바이트 / 한글 지원
+
 ---
 
 # 기타
@@ -342,12 +466,18 @@ TCP, UDP의 차이점은?
 디자인 패턴이란?
 오브젝트 풀링(Object Pooling)이란?
 
+* 개발할 때 자주 사용하는 패턴 / 싱글턴, 옵저버, mvc, 팩토리 등
+* 필요한 객체 미리 만들어놓고 필요할 때 사용 / 무쌍 몬스터 생성 / 생성삭제 줄이기
+
 ---
 
 # 기타
 
 리플렉션(Reflection)이란?
 트랜잭션이란?
+
+* 런타임 객체 정보 / 메타데이터 씬 정보 저장 / serialization, deserialization
+* db 쿼리 날리기 / select, update, insert, delete / 처리할 때 디비 상태
 
 ---
 
@@ -358,6 +488,11 @@ Nan이란?
 프로파일러란?
 boost 라이브러리란?
 
+* float == 비교 / .이하 2^- 1,2,3,4 로 계산
+* 0/0 숫자가 아닌 값
+* cpu가 어디서 부하
+* 네트워크, 숫자 정밀도 라이브러리
+
 ---
 
 # 인성
@@ -366,6 +501,12 @@ boost 라이브러리란?
 무슨 게임 개발을 해보고 싶은가?
 살면서 제일 재미있게 했던 게임은 무엇인가?
 좋아하는 게임은 무엇인가?
+
+* 게임 좋다 / 컨텐츠 제작, 몰입 / 욕구 피라미드
+* 대학교 소웨과목 수강, 게임인재원, 알고리즘
+* 오픈월드 RPG, 원신, 잘 팔릴 게임
+* 원신, 젤다의 전설보다 연속된 세계
+* 오픈월드, 팰월드 최근 
 
 ---
 
@@ -378,6 +519,12 @@ boost 라이브러리란?
 어떤 목표를 가지고 어떤 프로그래밍을 하고 싶은가?
 개발할 때 중요한 것은 무엇인가?
 
+* 프로그램, 프로 X
+* 타 직군 협업 / 게임 함께
+* 팀스위니, 언리얼엔진
+* 사용자 의미, 재밌는 게임
+* 전체에서 어떻게 작동되는지 보기
+
 ---
 
 # 인성
@@ -385,10 +532,16 @@ boost 라이브러리란?
 대화를 주도하는 편인가?
 본인의 성격은 어떠한가?
 스트레스는 어떻게 관리하는가?
-자신은 어떤 성향의 사람인가?
 본인의 장,단점은 무엇인가?
 단점을 극복하기 위해 어떠한 노력을 했는가?
 좌우명이 따로 있는가?
+
+* 주도 X, 
+* infp
+* 일기쓰기, 노래방
+* 차분함 / 재미없다
+* 생각 많이, 내 컨텐츠
+* 하면 된다 
 
 ---
 
@@ -399,6 +552,11 @@ boost 라이브러리란?
 입사 후 3년 내 목표는 무엇인가?
 연봉은 얼마나 받고 싶은가?
 
+* 설정한 목표를 이루는 것
+* 신입 돈 + 성장 효율
+* 1 1인분 2 전체 파악 3 문제 해결
+* 회사 인턴 내규
+
 ---
 
 # 인성
@@ -407,6 +565,11 @@ boost 라이브러리란?
 팀 프로젝트에서 가장 중요한 것은 무엇인가?
 동료나 상사와 갈등이 있을 때 어떻게 해결할 것인가?
 다른 지원자와 무슨 차별점이 존재하며, 왜 당신을 뽑아야하는가?
+
+* 원인파악, 그만큼 더 하기
+* 다른 사람 함께 일하기
+* 원인파악 문제 해결 
+* 기록, 게임인재원 1년 / 과거 기록, 뭘 해야할지 판단
 
 ---
 
@@ -417,3 +580,8 @@ boost 라이브러리란?
 최근 일어난 사회 문제에 대해 아는 것이 무엇이 있는가?
 그 중 IT 관련 소식에 대해 아는 것이 있는가?
 최종적으로 무엇을 개발하고 싶은가?
+
+* 영어자막 영화 드라마
+* 프랑켄슈타인 너진똑 / 빅터 프랭클 죽음의수용소에서 / 분석, 중년게이머 김실장, 슈카월드
+* 메이플 유저 큐브 확률, 260 6차 라라
+* 감동을 주는 컨텐츠 제작 
